# task-avito-tech-python-trainee-assignment

./: .gitignore  Makefile  README.md  pyproject.toml
matrix_parse/: main.py
tests/: __init__.py  tests.py
tests/fixtures/: matrix_5x3.txt  matrix_6x6.txt  matrix_data_4x4.json  matrix_data_5x3.json  matrix_data_6x6.json
